--- a/styles.css
+++ b/styles.css
@@ -1,50 +1,48 @@
+/*  your css code here. If applicable */
 body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f6f6f6;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	background-color:#F6F6F6;
+	height:100vh;
 }
-
-.left{
-    width: 450px;
-    margin-top: 70px;
-    /* margin-left: 20px; */
-    display: inline-block;
-    /* border: 1px solid black; */
-
-}
-
 
 form{
-    display: flex;
-    width:300px;
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px #ccc;
-    flex-direction: column;
-    gap:20px;
-    /* border: 1px solid red; */
-
+	display:flex;
+	flex-direction:column;
+	gap:10px;
+	text-align:center;
+	background-color:white;
+	width:300px;
+	padding:20px;
+	border-radius:5px; 
 }
-form>a{
-    text-decoration: none;
-}
-
 input{
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
+	padding:10px;
+	border-radius:5px;
 }
-form>button{
-    background-color: #1877f2;
-    border-radius: 5px;
-    padding:10px 20px;
-    width: 300px;
-    border: 1px solid #ccc;
+button{
+	padding:10px;
+	border-radius:5px;
 }
-.signup{
-    background-color: #43B72A;
-    color:white;
+a{
+	text-decoration:none;
+	padding-bottom:10px;
+	border-bottom:1px solid gray;
+}
+.b1{
+	background-color:blue;
+	color:white;
+}
+
+.b2{
+	background-color:green;
+	width:200px;
+	color:white;
+	margin:auto;
+	/* text-align:center; */
+	
+}
+.d2{
+	margin-left:10px;
 }
